# learning

./: README.md
C_learing/: C_predefined_macros.md  ListNode.c  main.c  test.c
algorithms/: qmedian.c
algorithms/longest_common_subsquece/: pairwise_alignment.py
algorithms/pairwised_alignment/: smith_waterman.py
algorithms/sorting/: sorting_insert.py
bash/: add-prefix-suffix-to-array-ele.sh
cc/: big_small_endian.c  calculate_sha256.c  directory_operation.c  eigen.cpp  linux_directory_operation.c  zlib_usage.c
cmake/: README.md
cmake/external_lib/src/: multi.c  multi.h
cmake/project/: CMakeLists.txt
cmake/project/function_sub/: CMakeLists.txt  sub.c
cmake/project/src/: add.c  main.c
docs/: conf.py  index.rst  learning-docs.rst
html-css-js/: basic-a.css  basic.html  basic.js
html-css-js/proj-1/: README  index.html
html-css-js/proj-1/css/: layout.css
html_css_js/: responsive_navigation_bar.html
python/builtin_modules/enum/: demo-enum.py
python/ctypes_usage/: Makefile  demo.py  pydl.c
python/jupyter/: test.ipynb
python/python_extension/: fhladd.c  mypymod.c  setup.py
statistics/: linner_regression.c
statistics/linner-regression/: linner_regression_scipy.py
